# AdventOfCode2022

./: LICENSE
day01/: calories.py
day02/: part2.py  rock_paper_scissors.py
day03/: rucksack.py
day04/: part2.py
day05/: crates.py  part1.py  part2.py
day06/: part1.py  part2.py  signal.py
day07/: consoletrace.py  part1.py  part2.py
day08/: forest.py  part1.py  part2.py
day09/: part1.py  part2.py  rope.py
day1/: part1.py  part2.py
day10/: machine.py  part1.py  part2.py
day11/: monkeys.py  part1.py  part2.py  product.py  pushable.py
day12/: elevation.py  part1.py  part2.py
day13/: packets.py  part1.py  part2.py
day14/: part1.py  part2.py  rocks.py
day15/: part1.py  part2.py  pyproject.toml  sensors.py  vector.py
day16/: elephants.py  part1.py  part2.py
day17/: jets.py  part1.py  part2.py
day18/: droplet.py  part1.py  part2.py
day19/: ex2.txt  factory.py  im.py  part1.py  part2.py  short_input.txt  test.txt
day2/: part1.py
day20/: mix.py  part1.py
day21/: monkeys.py  part1.py  part2.py
day3/: part1.py  part2.py
day4/: assignments.py  part1.py
