[tool.poetry]
name = "day15"
version = "0.1.0"
description = ""
authors = ["Stephen Leach <sfkleach@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
portion = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
